--- a/src/content/docs/pt-br/pages/servicos/slack-channel.mdx
+++ b/src/content/docs/pt-br/pages/servicos/slack-channel.mdx
@@ -1,7 +1,6 @@
 ---
 title: Slack Channel
-description: 
-O serviço Slack Channel refere-se ao suporte e assistência fornecidos para auxiliar os clientes por meio de comunicação escrita.
+description: O serviço Slack Channel refere-se ao suporte e assistência fornecidos para auxiliar os clientes por meio de comunicação escrita.
 meta_tags: services, support, slack channel
 namespace: docs_support_slack_channel
 permalink: /documentacao/servicos/slack-channel/
