[EDU-2442] Add rotate feature in Image Processor (#245)
* [add] EN

* [add] PT + EN fixes

* Apply suggestions from code review

Co-authored-by: hannah <109289700+hannah-sk@users.noreply.github.com>

* Apply suggestions from code review

* [rmv] center tag

---------

Co-authored-by: bru-andrade <bruna.andrade@gmail.com>
Co-authored-by: hannah <109289700+hannah-sk@users.noreply.github.com>

--- a/src/content/docs/pt-br/pages/produtos/edge-application/image-processor/index.mdx
+++ b/src/content/docs/pt-br/pages/produtos/edge-application/image-processor/index.mdx
@@ -48,7 +48,7 @@ Você especifica as dimensões desejadas como argumentos na query da URL no form
 
 O arquivo `/image.jpg?ims=WidthxHeight` a seguir seria redimensionado de acordo com os parâmetros `Width` e `Height` definidos:
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=880x)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=880x)</center>
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=880x)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=880x)</p>
 
 ### Autocrop
 
@@ -56,7 +56,7 @@ Ao especificar `Width` e `Height`, a imagem pode ser cortada automaticamente par
 
 Ao adicionar a query `?ims=400x400` à URL da imagem, ela será redimensionada para 400 por 400 pixels com corte automático. Por exemplo:
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=400x400)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=400x400)</center>
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=400x400)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=400x400)</p>
 
 ### Preservar proporção
 
@@ -64,11 +64,11 @@ A proporção pode ser preservada mantendo-se apenas um dos dois parâmetros na 
 
 Ao alterar a query da imagem para `?ims=400x`, a altura será calculada automaticamente e a largura será definida como 400 pixels:
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=400x)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=400x)</center>
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=400x)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=400x)</p>
 
 Por outro lado, ao usar a query `?ims=x100`, a largura será calculada automaticamente, mas a altura será definida como 100 pixels:
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=x100)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=x100)</center>
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=x100)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=x100)</p>
 
 ### Manter a dimensão original
 
@@ -76,7 +76,7 @@ O valor `orig` pode ser substituído para manter a dimensão original da imagem 
 
 A imagem a seguir tem a query `?ims=450xorig`, mantendo a altura original, mas definindo a largura para 450 pixels:
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=450xorig)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=450xorig)</center>
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=450xorig)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=450xorig)</p>
 
 ### Redimensionar para ajustar a limites
 
@@ -86,7 +86,7 @@ A proporção da imagem original é preservada. Se a área especificada for maio
 
 Uma imagem com a query `?ims=fit-in/400x400` será redimensionada para se ajustar ao limite máximo de tamanho da área que pode ocupar; nesse caso, 400 pixels de largura ou 400 pixels de altura, o que for atingido primeiro:
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/400x400)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/400x400)</center>
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/400x400)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/400x400)</p>
 
 ---
 
@@ -99,7 +99,29 @@ Corte imagens de uma coordenada para outra usando a query `ims=AxB:CxD`, onde:
 
 Por exemplo, a query da URL da imagem `?ims=430x20:910x730` iniciará o corte na coordenada inicial de 430x20 pixels e terminará na coordenada 910x730 pixels.
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=430x20:910x730)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=430x20:910x730)</center>
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=430x20:910x730)](/assets/docs/images/image-processor/Image_Processor_1.png?ims=430x20:910x730)</p>
+
+---
+
+## Rotacionar imagens
+
+Você pode rotacionar uma imagem à esquerda usando a query `?ims=filters:rotate(Angle)`. Você pode especificar `Angle` como os seguintes valores:
+
+- `0`: não rotaciona.
+- `90`: rotaciona a imagem 90° à esquerda.
+- `180`: rotaciona a imagem 180° à esquerda.
+- `270`: rotaciona a imagem 270° à esquerda.
+- `360`: não rotaciona.
+
+Valores diferentes dos listados acima não irão rotacionar a imagem.
+
+:::caution[atenção]
+Imagens com uma proporção de 1:1 não irão ser redimensionadas. Porém, imagens que não são quadradas, quando rotacionadas a `90` e `270` graus, terão seus valores de altura e largura modificados.
+:::
+
+Essa imagem foi rotacionada por 270° através da query `?ims=filters:rotate(270)`:
+
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:rotate(270))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:rotate(270))</p>
 
 ---
 
@@ -111,15 +133,15 @@ O valor de qualidade recomendado, que fornece otimização sem nenhuma perda per
 
 A imagem a seguir tem a query `?ims=filters:quality(100)`, para 100% de qualidade:
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:quality(100))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:quality(100))</center>
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:quality(100))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:quality(100))</p>
 
 A próxima imagem tem a qualidade recomendada de 85% por meio da query `?ims=filters:quality(85)`:
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:quality(85))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:quality(85))</center>
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:quality(85))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:quality(85))</p>
 
 Por fim, a próxima imagem foi ajustada para 15% de qualidade com a query `?ims=filters:quality(15)`:
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:quality(15))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:quality(15))</center>
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:quality(15))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:quality(15))</p>
 
 :::note
 Se você inserir uma resolução maior que a original, a imagem será exibida com a maior resolução possível.
@@ -146,7 +168,7 @@ Você pode converter a imagem em outro formato usando a query `?ims=filters:form
 
 Portanto, a imagem PNG `http://yourdomain.com/image.png?ims=filters:format(gif)` será convertida para o formato GIF:
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:format(gif))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:format(gif))</center>
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:format(gif))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=filters:format(gif))</p>
 
 :::caution
 Para converter uma imagem em WEBP, você deve enviar o cabeçalho `Accept: image/webp` na solicitação.
@@ -162,11 +184,11 @@ Crie uma imagem derivada que seja maior que a original, mas, em vez de redimensi
 
 Por exemplo, uma imagem com a query `?ims=fit-in/400x400/filters:fill(gray)` terá seu entorno redimensionado para caber em uma área de 400x400 pixels, e a cor em torno dessa área será cinza:
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/400x400/filters:fill(gray))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/400x400/filters:fill(gray))</center>
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/400x400/filters:fill(gray))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/400x400/filters:fill(gray))</p>
 
 Ao alterar o código de cor, você pode modificar a cor ao redor da área redimensionada, como `?ims=fit-in/300x400/filters:fill(008080)`:
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/300x400/filters:fill(008080))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/300x400/filters:fill(008080))</center>
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/300x400/filters:fill(008080))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/300x400/filters:fill(008080))</p>
 
 ---
 
@@ -176,5 +198,4 @@ Combine os filtros desejados separando-os com `:` em uma única string: `filters
 
 Por exemplo, a query `?ims=fit-in/400x400/filters:fill(00ffff):quality(100)` redimensionará uma imagem para caber em uma área de 500 por 500 pixels, preencherá a área redimensionada com a cor `#00ffff` e melhorará a qualidade para 100%:
 
-<center>[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/500x500/filters:fill(f3652b):quality(100))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/500x500/filters:fill(f3652b):quality(100))</center>
-
+<p align="center">[![Image_Processor_1](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/500x500/filters:fill(f3652b):quality(100))](/assets/docs/images/image-processor/Image_Processor_1.png?ims=fit-in/500x500/filters:fill(f3652b):quality(100))</p>
