[EDU-2588] Remove pricing details and go-live (#255)
* [mod] go-live-event

* [rmv] services details

* [mod] EN addons

---------

Co-authored-by: bru-andrade <bruna.andrade@gmail.com>

--- a/src/content/docs/en/pages/services/service-plans.mdx
+++ b/src/content/docs/en/pages/services/service-plans.mdx
@@ -8,65 +8,17 @@ permalink: /documentation/services/service-plans/
 
 Azion's service plans are catalogs with different service level plans, which, added to the Azion platform's product portfolio, help the customer to build, secure, deploy, and observe their applications running on Azion, reducing costs and increasing competitive advantage, without worrying about internal processes to ensure increasingly efficient applications. Divided into 4 plans: **Developer**, **Business**, **Enterprise*, and **Mission Critical**, the Azion plans were designed to meet different needs and business sizes.
 
-## Service Plans Overview
-
-All Azion Plans will have access to Azion core features. Aside from the core features, each plan have specific features and services, as follows:
-
-### Developer Plan
-
-- Access to features in Preview:
-- Azion might give early access to new features for customers that are still under refinement by our product teams. Note that these features are not covered by a Service Level Agreement.
-- Community Forum & Knowledge Base: 24x7 access to Customer Service, documentation, whitepapers, bug reports and our Community on Discord.	
-- Composable Applications: Extend customer's applications with third-party integrations available in Azion Marketplace.
-- Online Learning Program (Education Program): 24x7 access to https://learn.azion.com/.
-
-### Business Plan
-
-All **Developer** plan features, plus:
-
-- DDoS Protection Unmetered: Azion will provide unmetered mitigation during a DDoS incident.
-- Technical Support: 24x7 access. Customers can open tickets via ticket and email, reporting bugs and incidents.
-- Integration Services: 5 (five) hours per year. The customer can buy an additional 20 hours package for USD 1,5k or R$ 6k.
-
-### Enterprise Plan
-
-All **Business** plan features, plus:
-
-- Single Sign-On (SSO): federated authentication.
-- Technical Support: 24x7 access. The customer can open tickets via ticket, email, and phone, reporting bugs and incidents.
-- Business Events Support: access to 1 event/year.
-- Integration Services: 20 (twenty) hours per year. The customer can buy an additional 20 hours package for USD 1,5k or R$ 6k.
-- Best Practice Review (BPR): 20 (twenty) hours per year. The customer can buy an additional 20 hours package for USD 3k or R$ 12k.
-- Customer Success Manager: group of CSMs who may serve multiple clients.
-- PCI DSS v4.0, SOC 2 Type 2 (and SOC 3) and Edge Network Custom Maps: compliance features.
-
-### Mission Critical Plan
-
-All **Enterprise** plan features, plus:
-
-- Business Events Support: limited to 100h or 12 events/year.
-- Integration Services: 60 (sixty) hours per year. The customer can buy an additional 20 hours package for USD 1,5k or R$ 6k.
-- Best Practice Review (BPR): 40 (fourty) hours per year. The customer can buy an additional 20 hours package for USD 3k or R$ 12k.
-- Technical Account Manager: up to 20h monthly included on modality POOL. The customer can buy an additional hourly package depending on the need.
+For more information on Azion Service Plans, visit the [Pricing](https://www.azion.com/en/pricing) page.
 
 ### Add-ons
 
 Depending on the Azion plan contracted, clients can buy add-ons:
 
-- Custom Education Programs<br/><br />
-Train the customer's team by product or service with our on site (in-person) or virtual classes. Available as paid add-on for **Enterprise** and **Mission Critical** plans.<br/><br />
+- Custom Education Programs
+- Slack Channel
+- Technical Account Manager
+- Security Response Team (SRT)
+- BPR
+- Integration Services
 
-- Slack Channel<br/><br />
-Access to Azion's Slack Channel for assistance and quick questions. Available as paid add-on for **Enterprise** and **Mission Critical** plans.<br/><br />
-
-- Technical Account Manager<br/><br />
-Azion TAM act as a Consultant, proactively providing strategic technical guidance to help accelerate the digital transformation and edge computing journey, and provide insights to maximize infrastructure investment (on-premises and/or in the cloud). Available as paid add-on for **Enterprise** and **Mission Critical** plans. Named TAM (140h/month package) only available on the **Mission Critical** service plan.<br/><br />
-
-- Security Response Team - SRT<br/><br />
-Additional hour package available. Available as paid add-on for **Enterprise** and **Mission Critical** plans.<br/><br />
- 
-- BPR and Integration Services<br/><br />
-Additional hour package available. Available as paid add-on for **Business**, **Enterprise**, and **Mission Critical** plans.<br/><br />
-
-- FIPS 140 Level 3<br/><br />
-Compliance feature, available only for **Mission Critical** plan.
+For more information on Add-ons, visit the [Pricing](https://www.azion.com/en/pricing) page.
