--- a/src/content/docs/en/pages/services/support/business-events-support.mdx
+++ b/src/content/docs/en/pages/services/support/business-events-support.mdx
@@ -14,8 +14,8 @@ This service offers a follow-up from expert engineers, consultancy, and the nece
 
 - Stress tests monitoring to assess the performance and capacity of the system under conditions of intense load.
 - Production environment setup and tuning suggestions to ensure smooth and optimized live performance.
-- Solving technical problems during the go-live.
-- Continuous monitoring of system performance during go-live.
+- Solving technical problems during the event.
+- Continuous monitoring of system performance during events.
 - Dedicated technical assistance and support to address any emerging issue.
 
 If you have an Enterprise or Mission Critical Service Plan, you can request this service through the [Support Portal](https://tickets.azion.com/en/support/login/new), within 72 hours prior to the event.
@@ -23,5 +23,5 @@ If you have an Enterprise or Mission Critical Service Plan, you can request this
 For more detailed information about the Azion Service Plans, [see Pricing options](https://www.azion.com/en/pricing/).
 
 :::note
-The Go-Live Support service is conducted remotely by video meetings.
+The Business Event Support service is conducted remotely by video meetings.
 :::
