--- a/src/content/docs/pt-br/pages/servicos/planos-de-servico.mdx
+++ b/src/content/docs/pt-br/pages/servicos/planos-de-servico.mdx
@@ -8,64 +8,17 @@ permalink: /documentacao/servicos/planos-de-servico/
 
 Os Planos de Serviço da Azion são catálogos com diferentes planos de nível de serviço, que, somados ao portfólio de produtos da plataforma Azion, ajudam o cliente a construir, proteger, implantar e observar suas aplicações rodando na Azion, reduzindo custos e aumentando a vantagem competitiva, sem se preocupar com processos internos para garantir aplicações cada vez mais eficientes. Divididos em 4 planos: **Developer**, **Business**, **Enterprise** e **Mission Critical**, os planos da Azion foram projetados para atender a diferentes necessidades e tamanhos de negócios.
 
-## Visão geral dos Planos de Serviço
+Para mais detalhes sobre os Planos de Serviço da Azion, acesse a página de [Preços](https://www.azion.com/pt-br/precos/). 
 
-Todos os Planos de Serviço da Azion terão acesso aos recursos principais da Azion. Além dos recursos principais, cada plano tem recursos e serviços específicos, da seguinte forma:
-
-### Plano Developer
-
-- Acesso aos recursos em Preview: a Azion pode dar acesso antecipado a novos recursos para clientes que ainda estão sob refinamento por nossas equipes de produtos. Observe que esses recursos não são cobertos por um Acordo de Nível de Serviço.
-- Fórum da Comunidade e Base de Conhecimento: acesso 24/7 a Atendimento ao Cliente, documentação, whitepapers, relatórios de bugs e acesso à Comunidade no Discord.
-- Composable Applications: estende as aplicações do cliente com integrações de terceiros disponíveis no Azion Marketplace.
-- Programa de Aprendizagem Online (Programa de Educação): acesso 24/7 a https://learn.azion.com/.
-
-### Plano ⁠Business
-
-Todos os recursos do plano **Developer**, além de:
-
-- DDoS Protection Unmetered: a Azion fornecerá mitigação ilimitada durante um incidente DDoS.
-- Suporte Técnico: acesso 24/7. Os clientes podem abrir tickets via ticket e email, relatando bugs e incidentes.
-- Serviços de Integração: 5 (cinco) horas por ano. O cliente pode comprar um pacote adicional de 20 horas por US$ 1,5 mil ou R$ 6 mil.
-
-### Plano Enterprise
-
-Todos os recursos do plano **Business**, além de:
-
-- Single Sign-On (SSO): autenticação federada.
-- Suporte Técnico: acesso 24/7. O cliente pode abrir tickets via ticket, email e telefone, relatando bugs e incidentes.
-- Business Events Support: acesso a 1 evento/ano.
-- Integration Services: 20 (vinte) horas por ano. O cliente pode comprar um pacote adicional de 20 horas por US$ 1,5 mil ou R$ 6 mil.
-- Best Practice Review (BPR): 20 (vinte) horas por ano. O cliente pode comprar um pacote adicional de 20 horas por US$ 3 mil ou R$ 12 mil.
-- Customer Success Manager: grupo de CSMs que podem atender vários clientes.
-- PCI DSS v4.0, SOC 2 Tipo 2 (e SOC 3) e Edge Network Custom Maps: recursos de conformidade.
-
-### Plano Mission Critical
-
-Todos os recursos do plano **Enterprise**, além de:
-
-- Business Events Support: limitado a 100h ou 12 eventos/ano.
-- Integration Services: 60 (sessenta) horas por ano. O cliente pode comprar um pacote adicional de 20 horas por US$ 1,5 mil ou R$ 6 mil.
-- Best Practice Review (BPR): 40 (quarenta) horas por ano. O cliente pode comprar um pacote adicional de 20 horas por US$ 3 mil ou R$ 12 mil.
-- Technical Account Manager: até 20h mensais inclusos na modalidade POOL. O cliente pode comprar um pacote adicional por hora, dependendo da necessidade.
-
-### Add-ons
+## Add-ons
 
 Dependendo do plano da Azion contratado, os clientes podem comprar add-ons:
 
-- Programas de Educação Personalizada<br/><br />
-   Treine a equipe do cliente por produto ou serviço com nossas aulas presenciais ou virtuais. Disponível como complemento pago para planos **Enterprise** e **Mission Critical**.<br/><br />
+- Custom Education Programs
+- Slack Channel
+- Technical Account Manager
+- Security Response Team (SRT)
+- BPR
+- Integration Services
 
-- Slack Channel<br/><br />
-   Acesso ao Slack Channel da Azion para assistência e perguntas rápidas. Disponível como complemento pago para planos **Enterprise** e **Mission Critical**.<br/><br />
-
-- Technical Account Manager<br/><br />
-   O TAM atua como um consultor, fornecendo orientação técnica estratégica de forma proativa para ajudar a acelerar a transformação digital e a jornada em edge computing e fornecer ideias para maximizar investimentos em infraestrutura (local e/ou na nuvem). Disponível como complemento pago para planos **Enterprise** e **Mission Critical**. TAM designado (pacote 140h/mês) disponível apenas no plano de serviço de **Mission Critical**.<br/><br />
-
-- Security Response Team (SRT)<br/><br />
-   Pacote de horas adicional disponível. Disponível como complemento pago para planos **Enterprise** e **Mission Critical**.<br/><br />
-
-- BPR e Serviços de Integração<br/><br />
-   Pacote de horas adicional disponível. Disponível como complemento pago para planos **Enterprise** e **Mission Critical**.<br/><br />
-
-- FIPS 140 Nível 3<br/><br />
-   Recurso de conformidade, disponível apenas para o plano de **Mission Critical**.
+Para mais detalhes sobre Add-ons, acesse a página de [Preços](https://www.azion.com/pt-br/precos/). 
