--- a/src/content/docs/en/pages/services/service-plans.mdx
+++ b/src/content/docs/en/pages/services/service-plans.mdx
@@ -16,9 +16,9 @@ Depending on the Azion plan contracted, clients can buy add-ons:
 
 - Custom Education Programs
 - Slack Channel
-- Technical Account Manager
+- Technical Account Manager (TAM)
 - Security Response Team (SRT)
-- BPR
+- Best Practices Review (BPR)
 - Integration Services
 
 For more information on Add-ons, visit the [Pricing](https://www.azion.com/en/pricing) page.
