--- a/src/content/docs/pt-br/pages/servicos/planos-de-servico.mdx
+++ b/src/content/docs/pt-br/pages/servicos/planos-de-servico.mdx
@@ -16,9 +16,9 @@ Dependendo do plano da Azion contratado, os clientes podem comprar add-ons:
 
 - Custom Education Programs
 - Slack Channel
-- Technical Account Manager
+- Technical Account Manager (TAM)
 - Security Response Team (SRT)
-- BPR
+- Best Practices Review (BPR)
 - Integration Services
 
 Para mais detalhes sobre Add-ons, acesse a página de [Preços](https://www.azion.com/pt-br/precos/). 
