[EDU-2581] & [EDU-2598] - add badge to inform the docs that are related do cli previous versions (#260)
* add badge to inform the docs that are related do cli previous versions

* Update src/content/docs/en/pages/guides/nextjs/index.mdx

--- a/src/content/docs/en/pages/azion-edge-runtime/api-reference/environment-variables/environment-variables.mdx
+++ b/src/content/docs/en/pages/azion-edge-runtime/api-reference/environment-variables/environment-variables.mdx
@@ -11,7 +11,8 @@ import Badge from '~/components/Badge.astro';
 <Badge variant="accent">
   Beta
 </Badge>
-The Environment Variables interface can be used inside Edge Functions to retrieve environment variables. You can use these variables to interact with backend systems like databases, private APIs, or any authenticated service. These variables can be managed through [Azion CLI](/en/documentation/products/cli/variables/).
+The Environment Variables interface can be used inside Edge Functions to retrieve environment variables. You can use these variables to interact with backend systems like databases, private APIs, or any authenticated service. These variables can be managed through [Azion CLI (Previous versions of azion 1.x.y)](/en/documentation/products/cli/variables/).
+
 
 ---
 
