--- a/src/content/docs/en/pages/azion-edge-runtime/environment-variables-reference/environment-variables-reference.mdx
+++ b/src/content/docs/en/pages/azion-edge-runtime/environment-variables-reference/environment-variables-reference.mdx
@@ -51,6 +51,10 @@ You can manage your environment variables trough the [Azion API](https://api.azi
 
 ### Azion CLI
 
+<Badge variant="accent">
+  for previous versions of azion cli 1.x.y
+</Badge>
+
 The command `variables` is available and can be used to manage your environment variables using [Azion CLI](/en/documentation/products/cli/variables/).
 
 Learn more about the command on [Variables command and its subcommands](/en/documentation/products/cli/variables/)
