--- a/src/content/docs/en/pages/guides/cli-static/index.mdx
+++ b/src/content/docs/en/pages/guides/cli-static/index.mdx
@@ -8,6 +8,12 @@ og_image: ''
 permalink: /documentation/products/guides/cli-static-application/
 ---
 
+import Badge from '~/components/Badge.astro';
+
+<Badge variant="accent">
+  for previous versions of azion cli 1.x.y
+</Badge>
+
 ## Static application
 
 A **static application** built with **HTML**, **CSS**, and **JavaScript** offers several advantages. It allows developers to easily create and maintain websites or informational pages with fixed content.
