--- a/src/content/docs/en/pages/guides/nextjs/index.mdx
+++ b/src/content/docs/en/pages/guides/nextjs/index.mdx
@@ -6,6 +6,13 @@ namespace: docs_use_case_nextJS
 permalink: /documentation/products/guides/nextjs-ssr-on-azion-platform/
 ---
 
+import Badge from '~/components/Badge.astro';
+
+
+<Badge variant="accent">
+  for previous versions of azion cli 1.x.y
+</Badge>
+
 ## Next.js and Server-side Rendering (SSR)
 
 **Next.js**, a flexible framework based on the **React** library, provides powerful tools for building fast applications.
