--- a/src/content/docs/pt-br/pages/azion-edge-runtime/api-reference/environment-variables/environment-variables.mdx
+++ b/src/content/docs/pt-br/pages/azion-edge-runtime/api-reference/environment-variables/environment-variables.mdx
@@ -13,7 +13,7 @@ import Badge from '~/components/Badge.astro';
   Beta
 </Badge>
 
-A interface de Variáveis de Ambiente pode ser usada dentro de edge functions para acessar variáveis de ambiente. Você pode usar essas variáveis para interagir com sistemas de back-end, como bancos de dados, APIs privadas ou qualquer serviço autenticado. Essas variáveis podem ser gerenciadas por meio da [Azion CLI](/en/documentation/products/cli/variables/).
+A interface de Variáveis de Ambiente pode ser usada dentro de edge functions para acessar variáveis de ambiente. Você pode usar essas variáveis para interagir com sistemas de back-end, como bancos de dados, APIs privadas ou qualquer serviço autenticado. Essas variáveis podem ser gerenciadas por meio da [Azion CLI nas versões anteriores à azion 1.x.y](/en/documentation/products/cli/variables/).
 
 ---
 
