--- a/src/content/docs/pt-br/pages/azion-edge-runtime/environment-variables-reference/environment-variables-reference.mdx
+++ b/src/content/docs/pt-br/pages/azion-edge-runtime/environment-variables-reference/environment-variables-reference.mdx
@@ -52,6 +52,10 @@ Você pode gerenciar suas variáveis de ambiente através da [API da Azion](http
 
 ### Azion CLI
 
+<Badge variant="accent">
+  para versões da Azion CLI anteriores à 1.x.y
+</Badge>
+
 O comando `variables` está disponível e pode ser usado para gerenciar suas variáveis de ambiente através da [Azion CLI](/pt-br/documentacao/produtos/cli/variables/).
 
 Saiba mais sobre o comando em [comando variables e seus subcomandos](/pt-br/documentacao/produtos/cli/variables/)
