--- a/src/content/docs/pt-br/pages/guias/cli-static/index.mdx
+++ b/src/content/docs/pt-br/pages/guias/cli-static/index.mdx
@@ -8,6 +8,12 @@ menu_namespace: cliMenu
 permalink: /documentacao/produtos/guias/cli-static-application/
 ---
 
+import Badge from '~/components/Badge.astro';
+
+<Badge variant="accent">
+  para versões da Azion CLI anteriores à 1.x.y
+</Badge>
+
 Uma aplicação estática construída com **HTML**, **CSS** e **JavaScript** oferece alguns benefícios, como permitir que os desenvolvedores criem e mantenham facilmente sites ou páginas com conteúdo fixo.
 
 O uso do HTML fornece um layout estruturado e organizado para a aplicação, enquanto o CSS permite um estilo consistente, aprimorando o apelo visual em geral. O JavaScript adiciona interatividade e funcionalidade básica, melhorando a experiência do usuário.
