--- a/src/content/docs/pt-br/pages/guias/nextjs/index.mdx
+++ b/src/content/docs/pt-br/pages/guias/nextjs/index.mdx
@@ -7,6 +7,12 @@ namespace: docs_use_case_nextJS
 permalink: /documentacao/produtos/guias/nextjs-ssr-na-plataforma-azion/
 ---
 
+import Badge from '~/components/Badge.astro';
+
+<Badge variant="accent">
+  para versões da Azion CLI anteriores à 1.x.y
+</Badge>
+
 **Next.js**, um framework flexível baseado na biblioteca **React**, fornece ferramentas poderosas para criar aplicações rápidas.
 
 O **SSR** gera o HTML para cada requisição, oferecendo vários benefícios, como:
