--- a/src/content/docs/en/pages/guides/getting-to-know-rtm/getting-to-know-rtm.mdx
+++ b/src/content/docs/en/pages/guides/getting-to-know-rtm/getting-to-know-rtm.mdx
@@ -56,4 +56,4 @@ Documentation related to RTM's screens in the **Help Center** isn't available fo
 
 After becoming familiar with RTM, you can continue your journey.
 
-Check the documentation to learn more about Azion products to [Build](https://www.azion.com/en/documentation/products/build/), [Secure](https://www.azion.com/en/documentation/products/secure/), [Deliver](https://www.azion.com/en/documentation/products/deliver/), and [Observe](https://www.azion.com/en/documentation/products/observe/) your edge applications and take advantage of the edge.
+Check the documentation to learn more about Azion products to [Build](https://www.azion.com/en/documentation/products/build/), [Secure](https://www.azion.com/en/documentation/products/secure/), [Deploy](https://www.azion.com/en/documentation/products/deploy/), and [Observe](https://www.azion.com/en/documentation/products/observe/) your edge applications and take advantage of the edge.
